# libcdp

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  TODO.md
docs/: DOMAIN.md  README.md
docs/decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md
examples/: cdp_page_example.c
fuzz/: cdp_fuzz_feed.c
include/: cdp.h
src/: cdp.c
tests/: cdp_dialectic.c  cdp_errors.c  cdp_smoke.c
